--- a/weblog/Template/about.html
+++ b/weblog/Template/about.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="/posts/">Posts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Admin</a>
+                    <a class="nav-link" href="/admin/">Admin</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about/">About US</a>
