--- a/weblog/Template/unconfirmed_comments.html
+++ b/weblog/Template/unconfirmed_comments.html
@@ -4,106 +4,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Admin</title>
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <!-- Optional theme -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/cerulean/bootstrap.min.css">
-
-    <!-- Your custom styles -->
-    <link rel="stylesheet" href="styles.css">
     <style>
         .nav {
             background-color: royalblue !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
             min-height: 260px;
-            /*padding-right: 10px;*/
         }
-
         .nav_total {
             background-color: royalblue !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
             min-height: 260px;
         }
-
         .my_content {
             height: 100%;
         }
-
         .content {
             position: relative;
             padding-left: 0;
             padding-right: 25px;
         }
-
-        /*.line {*/
-        /*    position: absolute;*/
-        /*    top: 0;*/
-        /*    left: 0;*/
-        /*    height: 100%;*/
-        /*    width: 2px;*/
-        /*    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 123, 255, 1) 50%, rgba(0, 0, 0, 0) 100%);*/
-        /*    !*background: linear-gradient(90deg, rgba(172,167,255,1) 0%, rgba(0,123,255,1) 4%, rgba(0,123,255,1) 96%, rgba(172,167,255,1) 100%);*!*/
-        /*    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
-
-        /*}*/
-
-        .center {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            /*height: 100vh;*/
-            /*width: 100px;*/
-            /*background-color: #fff;*/
-            /*border-left: 10px solid;*/
-            /*border-image: linear-gradient(to bottom, #4c4c4c, rgba(76, 76, 76, 0)) 1 100%;*/
-
-        }
-
-        /*.content::before {*/
-        /*    margin-right: 10px;*/
-        /*    content: "";*/
-        /*    position: absolute;*/
-        /*    top: 0;*/
-        /*    bottom: 0;*/
-        /*    left: -10px;*/
-        /*    width: 3px;*/
-        /*    background: linear-gradient(to bottom, #3e61b3, rgba(76, 76, 76, 0));*/
-        /*    !*border-radius: 20%;*!*/
-        /*}*/
-
-        /*.content:after {*/
-        /*    content: "";*/
-        /*    position: absolute;*/
-        /*    bottom: 0;*/
-        /*    left: -10px;*/
-        /*    width: 10px;*/
-        /*    height: 20px;*/
-        /*    background: linear-gradient(to bottom, rgba(76, 76, 76, 0), #4c4c4c);*/
-        /*}*/
         .container-fluid {
             display: flex;
             flex-wrap: wrap;
         }
-
         .sidebar {
             flex: 0 0 25%;
-            /* Set the width of the sidebar here */
             background-color: #f1f1f1;
         }
-
         .content {
             flex: 1;
-            /* This will make the content take up the remaining space */
             background-color: #fff;
         }
-
     </style>
-
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -119,22 +56,22 @@
                         <br>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-light" href="admin.html">
+                        <a class="nav-link active text-light" href="/admin/">
                             Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="posts.html">
+                        <a class="nav-link text-light" href="/posts/">
                             Posts
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="contactUs_messages.html">
+                        <a class="nav-link text-light" href="/admin/contactUs_messages/">
                             contact us messages
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="unconfirmed_comments.html">
+                        <a class="nav-link text-light" href="/admin/unconfirmed_comments/">
                             unconfirmed comments
                         </a>
                     </li>
@@ -142,17 +79,17 @@
                         <hr>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="../home.html">
+                        <a class="nav-link text-light" href="/home/">
                             Home page
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="../writer/writer.html">
+                        <a class="nav-link text-light" href="/writer/">
                             Writer page
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="../about.html">
+                        <a class="nav-link text-light" href="/about/">
                             About us page
                         </a>
                     </li>
@@ -161,21 +98,11 @@
                             Log out
                         </a>
                     </li>
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <br><br><br>-->
-                    <!--                        <div class="row justify-content-center">-->
-                    <!--                            <div class="col-6">-->
-                    <!--                                <button class="btn btn-info btn-block">Logout</button>-->
-                    <!--                                <br>-->
-                    <!--                            </div>-->
-                    <!--                        </div>-->
-                    <!--                    </li>-->
                 </ul>
             </div>
         </nav>
         <div class="col-md-10 col-sm-12 ">
             <div class="content" style="margin-top: 30px">
-                <!--                <h1 class="text-info">Dashboard</h1>-->
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8">
@@ -190,8 +117,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!--                write messages display here-->
                 <div class="card" style="margin-top: 25px">
                     <div class="card-header">
                         Quote
