--- a/weblog/Template/userPosts.html
+++ b/weblog/Template/userPosts.html
@@ -19,20 +19,17 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="writer.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="/writer/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="userPosts.html">Posts</a>
+                    <a class="nav-link" href="/userPosts/">Posts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="createPost.html">write</a>
+                    <a class="nav-link" href="/createPost/">write</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="profile.html">profile</a>
+                    <a class="nav-link" href="/profile/">profile</a>
                 </li>
-                <!--                <li class="nav-item">-->
-                <!--                    <a class="nav-link" href="contact.html">Contact Us</a>-->
-                <!--                </li>-->
             </ul>
         </div>
         <ul class="nav navbar-nav navbar-right">
@@ -45,8 +42,8 @@
 <div>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="writer.html">Writer</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Profile</li>
+            <li class="breadcrumb-item"><a href="/writer/">Writer</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Posts</li>
         </ol>
     </nav>
 </div>
