--- a/weblog/Template/writer.html
+++ b/weblog/Template/writer.html
@@ -19,20 +19,17 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="writer.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="/writer/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="userPosts.html">Posts</a>
+                    <a class="nav-link" href="/userPosts/">Posts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="createPost.html">write</a>
+                    <a class="nav-link" href="/createPost/">write</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="profile.html">profile</a>
+                    <a class="nav-link" href="/profile/">profile</a>
                 </li>
-                <!--                <li class="nav-item">-->
-                <!--                    <a class="nav-link" href="contact.html">Contact Us</a>-->
-                <!--                </li>-->
             </ul>
         </div>
         <ul class="nav navbar-nav navbar-right">
@@ -45,8 +42,7 @@
 <div>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="writer.html">Writer Home</a></li>
-            <!--            <li class="breadcrumb-item active" aria-current="page">Posts</li>-->
+            <li class="breadcrumb-item"><a href="/writer/">Writer Home</a></li>
         </ol>
     </nav>
     <div class="card">
@@ -64,7 +60,7 @@
                         highly recommend that you take some time to sit down and craft a thoughtful and well-written
                         post detailing your idea, as doing so may potentially help you to gain exposure, connect with
                         like-minded individuals, and ultimately bring your vision to fruition. </p>
-                    <a href="createPost.html" class="btn btn-primary btn-sm float-right">Write New Post</a>
+                    <a href="/createPost/" class="btn btn-primary btn-sm float-right">Write New Post</a>
                 </div>
             </div>
         </div>
@@ -109,7 +105,6 @@
             </div>
         </div>
     </div>
-
 </div>
 </body>
 </html>
